add big screen and print style

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ a, a:visited{
 
 .pricing{
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
@@ -37,7 +37,7 @@ a, a:visited{
 .card{
     display: flex;
     flex-direction: column;
-    width: 450px;
+    flex-basis: 450px;
 }
 
 .gallery img{
@@ -67,4 +67,63 @@ a, a:visited{
 #logo{
     animation-name: appear;
     animation-duration: 5s;
+}
+
+@media screen and (min-width: 850px){
+    header{
+        flex-direction: row;
+        justify-content: space-between;
+        position: relative;
+    }
+
+    .nav_links{
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .card{
+        flex-basis: 250px;
+    }
+}
+
+@media all and (prefers-reduced-motion:reduce){
+	#logo {
+		animation: none;
+	}
+}
+
+@media print{
+    body{
+        background-image: none;
+    }
+
+    nav{
+        width: 100vw;
+    }
+
+    .nav_links{
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .pricing{
+        align-items: flex-end;
+    }
+
+    .card{
+        border: 2px solid #45ADDD;
+        flex-basis: 250px;
+    }
+
+    .gallery, #gallery{
+        display: none;
+    }
+
+    .pricing li:nth-child(odd)::before {
+        content: "\1F44D";
+    }
+
+    .pricing li:nth-child(even)::after {
+        content: "\1F44D";
+    }
 }
