--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,11 @@ a, a:visited{
 }
 
 @media screen and (min-width: 850px){
-    header{
+    body > header{
         flex-direction: row;
         justify-content: space-between;
-        position: relative;
+        position: sticky;
+        top: 0;
     }
 
     .nav_links{
@@ -108,6 +109,7 @@ a, a:visited{
 
     .pricing{
         align-items: flex-end;
+        flex-wrap: nowrap;
     }
 
     .card{
