--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,15 @@ a, a:visited{
 }
 
 @media screen and (min-width: 850px){
-    body > header{
+    header{
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    body > header{
         position: sticky;
         top: 0;
+        left: 0;
     }
 
     .nav_links{
